<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="10dp"
    tools:context=".Step2FirstActivity">

    <TextView
        android:id="@+id/TopHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="monospace"
        android:text="@string/topHeadingfirst"
        android:textAllCaps="true"
        android:textColor="#405866"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_topcard_view"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@id/rightGuideLine"
        app:layout_constraintStart_toStartOf="@id/leftGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/TopHeading">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_topcard_view"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cardViewheadingfrist"
                android:textAllCaps="true"
                android:textColor="#405866"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="78dp"
                android:text="@string/cardViewdespfrist"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:backgroundTint="#395185"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
        app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cardViewheadingsecond"
                android:textAllCaps="true"
                android:textColor="#F8F8F8"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="50dp"
                android:text="@string/cardViewdespsecond"
                android:textColor="#EDE9E9" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/cityHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:lineSpacingExtra="18sp"
        android:padding="5dp"
        android:text="@string/cityheading"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <EditText
        android:id="@+id/cityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="City"
        android:inputType="textPersonName"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/cityHeading" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="#405866"
        android:elevation="15dp"
        android:padding="5dp"
        android:text="@string/buttontText"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
        app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/cityText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>