<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Step2SecondActivity">

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="45dp"
      android:text="@string/topHeadingsecond"
      android:textAllCaps="true"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:text="@string/topdespsecond"
      android:textAllCaps="true"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

  <TextView
      android:id="@+id/textView8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="45dp"
      android:background="@drawable/bg_topcard_view"
      android:paddingStart="20dp"
      android:paddingTop="10dp"
      android:paddingEnd="20dp"
      android:paddingBottom="10dp"
      android:text="Post Graduate"
      android:textSize="20sp"
      app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
      app:layout_constraintTop_toBottomOf="@+id/textView2" />

  <TextView
      android:id="@+id/textView9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:background="@drawable/bg_topcard_view"
      android:paddingStart="20dp"
      android:paddingTop="10dp"
      android:paddingEnd="20dp"
      android:paddingBottom="10dp"
      android:text="Graduate/DIP"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
      app:layout_constraintTop_toBottomOf="@+id/textView7" />

  <TextView
      android:id="@+id/textView10"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:background="@drawable/bg_topcard_view"
      android:paddingStart="20dp"
      android:paddingTop="10dp"
      android:paddingEnd="20dp"
      android:paddingBottom="10dp"
      android:text="Class XII"
      android:textSize="20sp"
      app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
      app:layout_constraintStart_toStartOf="@+id/textView8"
      app:layout_constraintTop_toBottomOf="@+id/textView8" />

  <TextView
      android:id="@+id/textView11"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:background="@drawable/bg_topcard_view"
      android:paddingStart="20dp"
      android:paddingTop="10dp"
      android:paddingEnd="20dp"
      android:paddingBottom="10dp"
      android:text="Below Class X"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="@+id/textView9"
      app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
      app:layout_constraintTop_toBottomOf="@+id/textView9" />

  <TextView
      android:id="@+id/textView12"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:background="@drawable/bg_topcard_view"
      android:gravity="center"
      android:paddingStart="20dp"
      android:paddingTop="10dp"
      android:paddingEnd="20dp"
      android:paddingBottom="10dp"
      android:text="Class X"
      android:textSize="20sp"
      app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
      app:layout_constraintStart_toStartOf="@+id/textView10"
      app:layout_constraintTop_toBottomOf="@+id/textView10" />

  <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="45dp"
      android:background="@drawable/bg_topcard_view"
      android:paddingStart="20dp"
      android:paddingTop="10dp"
      android:paddingEnd="20dp"
      android:paddingBottom="10dp"
      android:text="PhD/Doctrate"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
      app:layout_constraintTop_toBottomOf="@+id/textView2" />


  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/leftGuideLine"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="20dp" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/rightGuideLine"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_end="20dp" />

  <Button
      android:id="@+id/button3"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="25dp"
      android:layout_marginTop="100dp"
      android:layout_marginEnd="25dp"
      android:backgroundTint="#405866"
      android:paddingTop="5dp"
      android:paddingBottom="5dp"
      android:text="@string/buttontText"
      android:textSize="18sp"
      app:cornerRadius="5dp"
      app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
      app:layout_constraintHorizontal_bias="0.53"
      app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
      app:layout_constraintTop_toBottomOf="@+id/textView11" />
</androidx.constraintlayout.widget.ConstraintLayout>